# persian-figlet

./: .gitignore  README.md  pyproject.toml
persian_figlet/: __init__.py  cli.py  fonts.py  renderer.py
persian_figlet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
persian_figlet/fonts/: standard.json
tests/: test_smoke.py
