[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persian-figlet"
version = "0.1.0"
description = "Figlet-style ASCII art for Persian text (Python port of moh3n9595/persian-figlet)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Hamid"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Text Processing :: Fonts",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.scripts]
persian-figlet = "persian_figlet.cli:main"

[tool.setuptools.package-data]
persian_figlet = ["fonts/*.json"]
